--- a/styles/style.css
+++ b/styles/style.css
@@ -12,6 +12,23 @@ body{
     box-sizing: border-box;
 }
 
+.header{
+    padding: 2% 0% 0% 15%;
+}
+
+.header__menu{
+    display: flex;
+    gap: 80px;
+}
+
+.header__menu__link{
+    font-family: "Montserrat", sans-serif;
+    font-size: 24px;
+    font-weight: 600;
+    color: #22D4FD;
+    text-decoration: none;
+}
+
 strong{
     color: #22D4FD;
 }
@@ -25,7 +42,7 @@ strong{
 .presentacion{
     display: flex;
     align-items: center;
-    margin: 10% 15% ;
+    padding: 6% 15% ;
     justify-content: space-between;
 }
 
