--- a/styles/style.css
+++ b/styles/style.css
@@ -1,9 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Krona+One&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
 :root{
-    --color-primario: #000000;
-    --color-secundario: #f6f6f6;
-    --color-terciario: #22d4fd;
+    --color-primario: #365E32;
+    --color-secundario: #81A263;
+    --color-terciario: #E7D37F;
 
     --fuente-monserrath: "Montserrat", sans-serif;
     --fuente-krona: "Krona One", sans-serif;
@@ -103,6 +103,13 @@ strong{
 
 .presentacion__enlaces__link:hover{
     background-color: #272727;
+}
+
+.presentacion__imagen{
+    height: 488px;
+    width: 550px;
+    border: 2%;
+    top: 235px;
 }
 
 .footer{
