--- a/styles/style.css
+++ b/styles/style.css
@@ -102,7 +102,8 @@ strong{
 }
 
 .presentacion__enlaces__link:hover{
-    background-color: #272727;
+    background-color: #FD9B63;
+    color: var(--color-primario);
 }
 
 .presentacion__imagen{
