--- a/styles/style.css
+++ b/styles/style.css
@@ -123,3 +123,9 @@ strong{
     font-size: 24px;
     font-weight: 400;
 }
+
+@media (max-width: 1200px) {
+    .presentacion{
+        flex-direction: column-reverse;
+    }
+}
