CENTRALIZANDO EL MENU DE OPCIONES

--- a/styles/style.css
+++ b/styles/style.css
@@ -125,6 +125,15 @@ strong{
 }
 
 @media (max-width: 900px) {
+
+    .header{
+        padding: 10%;
+    }
+
+    .header__menu{
+        justify-content: center;
+    }
+
     .presentacion{
         flex-direction: column-reverse;
     }
