PROYECTO CASI TERMINADO FALTA CV

--- a/styles/style.css
+++ b/styles/style.css
@@ -136,5 +136,10 @@ strong{
 
     .presentacion{
         flex-direction: column-reverse;
+        padding: 5%;
+    }
+
+    .presentacion__contenido{
+        width: auto;
     }
 }
